# ZJUGalaxy

./: README.md
code/: CMakeLists.txt  CMakeSettings.json  ZJUGalaxy.sln  blackhole.cpp  blackhole.h  blackhole_scene.cpp  blackhole_scene.h  bloom.h  cgl_shader.h  common.cpp  common.h  glm.cpp  glm.h  input.h  main.cpp  main_bh_test.cpp  main_earth.cpp  main_earth.h  obj.cpp  obj.h  simplexnoise.cpp  simplexnoise.h  snap.cpp  snap.h  sphere_tree.h  sunShader.h
code/Debug/: ZJUGalaxy.ilk
code/ZJUGalaxy/: ZJUGalaxy.vcxproj  main.cpp
code/ZJUGalaxy/Debug/: vc141.idb
code/ZJUGalaxy/Debug/Ex6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ex6.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
code/ZJUGalaxy/Debug/ZJUGalaxy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ZJUGalaxy.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
code/shader/: blackhole_adisc.glslf  bloom.glslf  gaussian_pass_h.glslf  sun.fg
code/shader_no_use/: bg_opt.glslf  bg_singlepass.glslf  bh_adisc.glslf  bh_edit.glslf  bh_own.glslf  bh_star.glslf  blackhole.glslf  gradient.glslf  pseudo.glslf
